<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">环连</string>
    <string name="welcome_str">连接最好的你我</string>
    <string name="app_info">version 0.1\nzna 所有</string>
    <string name="user_label">用户名</string>
    <string name="pass_label">密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="forget"><u>忘记密码？</u></string>
    <string name="name_pass_error">用户名或密码错误！</string>
    <string name="net_error">网络错误</string>
    <string name="unknown">未知错误！</string>
    <string name="community_item_str">社区</string>
    <string name="tab_families">家人</string>
    <string name="plan_item_str">计划</string>
    <string name="memo_item_str">备忘</string>
    <string name="settings_item_str">设置</string>
    <string name="action_settings">设置</string>
    <string name="display_text_defualt">大小考拉</string>
    <string name="user_name_hint">输入您的邮箱</string>
    <string name="passwd_hint">输入您的密码</string>
    <string name="regist_link"><u>注册>></u></string>
    <string name="register_username_hint">邮箱</string>
    <string name="register_passwd_hint">密码</string>
    <string name="nickname_label">昵称</string>
    <string name="register_nickname_hint">4到24位字符：支持中文，英文，数字和“-”</string>
    <string name="group_label">邀请码</string>
    <string name="protocol_confirm">同意《环连隐私协议》</string>
    <string name="register_group_hint">输入邀请码</string>
    <string name="regist_user">注册新用户</string>
    <string name="username_tips">无效的邮箱</string>
    <string name="password_tips">6到16位英文字符或数字</string>
    <string name="nickname_tips">昵称由4到24位中文、英文、数字或“-”组成</string>
    <string name="groupcode_tips">无效的邀请码</string>
    <string name="register_validate_hint">验证码</string>
    <string name="validate_tips">温馨提示：请到邮箱查看验证码</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="register_account">账号密码</string>
    <string name="register_repasswd_hint">确认密码</string>
    <string name="repassword_tips">密码不一致</string>
    <string name="progress_register">正在注册...</string>
    <string name="Register_failed">注册失败：</string>
    <string name="register_success">注册成功</string>
    <string name="nickname_avatar">头像昵称</string>
    <string name="nickname_default">小小考拉</string>
    <string name="modify_tips">温馨提示：触摸可以编辑</string>
    <string name="modify">完成注册</string>
    <string name="user_basic_info">基本信息</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="realname_tips">由2~4个中文字符组成</string>
    <string name="role_father">父亲</string>
    <string name="role_mother">母亲</string>
    <string name="role_brother">儿子</string>
    <string name="role_sister">女儿</string>
    <string name="role_other">其他</string>
    <string name="title_finish_basic_info">完善信息</string>
    <string name="hello_world">Hello world!</string>
    <string name="sex_group">性别</string>
    <string name="description_tips">用一句话介绍自己</string>
    <string name="sdcard_unavailable">SD卡不可用</string>
    <string name="set_headimg_failed">设置头像失败</string>
    <string name="upload_head_image">正在上传头像文件</string>
    <string name="next">下一步</string>
    <string name="realname_hint">真实姓名</string>
    <string name="progress_login">正在登录</string>
    <string name="login_fail">登录失败</string>
    <string name="tab_chat">聊天</string>
    <string name="gallery_item_str">相册</string>
    <string name="tab_record">互动</string>
    <string name="title_activity_family_detail"></string>
    <string name="vlidate_error">获取验证码失败</string>
    <string name="get_valid_code_format">%1$s秒后\n获取验证码</string>
    <string name="validate_error">验证码错误</string>
    <string name="username_tips2">该邮箱已经被注册</string>
    <string name="title_activity_memo">备忘</string>
    <string name="title_activity_gallery">相册</string>
    <string name="title_activity_plan">计划</string>
    <string name="title_activity_community">社区</string>
    <string name="title_activity_settings">设置</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">个人信息</string>
    <string name="notification_title">通知</string>
    <string name="notification_summary_on">接收新消息通知</string>
    <string name="notification_summary_off">不接收新消息通知</string>
    <string name="sound_summary_off">消息到达时不播放声音</string>
    <string name="sound_summary_on">消息到达时播放声音</string>
    <string name="sound_title">声音</string>
    <string name="vibrate_title">震动</string>
    <string name="vibrate_summary_on">消息到达时震动提示</string>
    <string name="vibrate_summary_off">消息到达时不震动提示</string>
    <string name="logout_msg_title">退出登录</string>
    <string name="logout_msg">退出登录后将接收不到新消息，确认退出？</string>

</resources>
