<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="location_category"
        android:layout="@layout/category_null"
        android:title="@null">
    </PreferenceCategory>
    <Preference
        android:key="user_info"
        android:layout="@layout/user_header_layout">
    </Preference>
    <PreferenceCategory
        android:key="location_category"
        android:layout="@layout/category_null"
        android:title="@null">
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notification"
        android:layout="@layout/preference_layout_top"
        android:widgetLayout="@layout/switch_button_layout"
        android:summaryOff="@string/notification_summary_off"
        android:summaryOn="@string/notification_summary_on"
        android:title="@string/notification_title"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="notification"
        android:key="sound"
        android:layout="@layout/preference_layout_middle"
        android:widgetLayout="@layout/switch_button_layout"
        android:summaryOff="@string/sound_summary_off"
        android:summaryOn="@string/sound_summary_on"
        android:title="@string/sound_title"
        />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="notification"
        android:key="vibrate"
        android:layout="@layout/preference_layout_bottom"
        android:summaryOff="@string/vibrate_summary_off"
        android:summaryOn="@string/vibrate_summary_on"
        android:title="@string/vibrate_title"
        android:widgetLayout="@layout/switch_button_layout"
        />
    <PreferenceCategory
        android:key="location_category"
        android:layout="@layout/category_null"
        android:title="@null">
    </PreferenceCategory>
    <Preference
        android:key="logout"
        android:layout="@layout/logout_layout">
    </Preference>

</PreferenceScreen>