<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/base_color"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/register_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    >
                    <EditText
                        android:id="@+id/et_username"
                        android:hint="@string/register_username_hint"
                        android:drawableLeft="@drawable/ic_account_white"
                        android:drawablePadding="8dp"
                        android:inputType="textEmailAddress"
                        style="@style/RegisterEditTextStyle"/>
                    <TextView
                        android:id="@+id/tv_username_error"
                        android:text="@string/username_tips"
                        style="@style/ErrorTextStyle"/>


                    <EditText
                        android:id="@+id/et_password"
                        android:hint="@string/register_passwd_hint"
                        android:drawableLeft="@drawable/ic_lock_white"
                        android:drawablePadding="8dp"
                        android:inputType="textPassword"
                        style="@style/RegisterEditTextStyle"/>
                    <TextView
                        android:id="@+id/tv_password_error"
                        android:text="@string/password_tips"
                        style="@style/ErrorTextStyle"/>

                    <EditText
                        android:id="@+id/et_validate"
                        android:hint="@string/register_validate_hint"
                        android:inputType="numberDecimal"
                        style="@style/RegisterEditTextStyle"/>
                    <TextView
                        android:id="@+id/tv_nickname_error"
                        android:text="@string/validate_tips"
                        style="@style/TipsTextStyle"/>


                </LinearLayout>

            <CheckBox
                android:id="@+id/ckb_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"

                android:layout_marginLeft="24dp"
                android:checked="true"
                android:text="@string/protocol_confirm"
                android:textColor="@color/base_color"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/error_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                card_view:cardBackgroundColor="@android:color/transparent"
                card_view:cardElevation="2dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_btn"
                        android:text="@string/regist"
                        android:textColor="#ffffff"
                        android:textSize="18sp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>