<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/base_color"
              android:gravity="center_vertical"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_launcher_white"/>

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="36sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            card_view:cardBackgroundColor="@color/base_color_light"
            card_view:cardElevation="2dp"
            >

            <LinearLayout
                android:id="@+id/login_form"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/white"
             >

                <EditText
                    android:id="@+id/user_name"
                    android:drawableLeft="@drawable/ic_account"
                    android:drawablePadding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:padding="8dp"
                    android:hint="@string/user_name_hint"
                    android:textAppearance="@style/InputText"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:background="@color/base_color_light"/>

                <EditText
                    android:id="@+id/password"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:hint="@string/passwd_hint"
                    android:textAppearance="@style/InputText"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            card_view:cardBackgroundColor="@android:color/transparent"
            card_view:cardElevation="2dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp"/>

        </LinearLayout>
        </android.support.v7.widget.CardView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp">
            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_color_light"
                android:background="@null"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:textSize="18sp"
                android:text="@string/remember_pass"/>


            <TextView
                android:id="@+id/regist_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="8dp"
                android:text="@string/regist_link"
                android:textColor="@color/base_color_light"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="8dp"
                android:text="@string/forget"
                android:textColor="@color/base_color_light"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/remember"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
