<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/base_color_gray_light"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_bar_height">
        <RelativeLayout
            android:id="@+id/tab_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv_tab_icon_chat"
                android:layout_marginTop="8dp"
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_chat"/>
            <TextView
                android:id="@+id/tv_tab_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_tab_icon_chat"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                android:textColor="@color/base_color"
                android:text="@string/tab_chat"/>
            <ImageView
                android:id="@+id/iv_extra_icon_chat"
                android:layout_alignEnd="@id/iv_tab_icon_chat"
                android:src="@drawable/ic_error_red"
                style="@style/TabExtraIconStyle"/>
            </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tab_family"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv_tab_icon_family"
                android:layout_marginTop="8dp"
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_family_gray"/>
            <TextView
                android:id="@+id/tv_tab_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_tab_icon_family"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                android:textColor="@color/base_color_gray"
                android:text="@string/tab_families"/>
            <ImageView
                android:id="@+id/iv_extra_icon_gallery"
                android:layout_alignEnd="@id/iv_tab_icon_family"
                android:src="@drawable/ic_error_red"
                style="@style/TabExtraIconStyle"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv_tab_icon_record"
                android:layout_marginTop="8dp"
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_record_gray"/>
            <TextView
                android:id="@+id/tv_tab_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_tab_icon_record"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                android:textColor="@color/base_color_gray"
                android:text="@string/tab_record"/>
            <ImageView
                android:id="@+id/iv_extra_icon_record"
                android:layout_alignEnd="@id/iv_tab_icon_record"
                android:src="@drawable/ic_error_red"
                style="@style/TabExtraIconStyle"/>
        </RelativeLayout>
        </LinearLayout>

    </LinearLayout>